<resources>
    <string name="app_name">영업관리</string>

    <!--인증-->
    <string name="auth_title">인증</string>
    <string name="auth_mobile_number">휴대폰번호</string>
    <string name="auth_auth_number">인증번호</string>
    <string name="auth_auth_number_hint">인증번호(숫자5자리)</string>
    <string name="auth_error_mobile_number_empty">휴대폰번호가 비었습니다.</string>
    <string name="auth_error_mobile_number_length">휴대폰번호를 확인하여 주십시오.</string>
    <string name="auth_error_auth_number_length">인증번호를 확인하여 주십시오.</string>
    <string name="auth_error_auth_number_empty">인증번호가 비었습니다.</string>
    <string name="auth_error_auth_number_incorrect">인증번호가 틀립니다.</string>

    <!--메인화면-->
    <string name="main_menu_list">업체리스트</string>
    <string name="main_menu_location">업체위치</string>
    <string name="main_menu_call">통화이력</string>
    <string name="main_menu_setting">환경설정</string>

    <!--업체리스트-->
    <string name="list_title">업체리스트</string>
    <string name="list_basic">기본</string>
    <string name="list_company">업체</string>
    <string name="list_search_hint">차량번호, 전화번호, 고객명</string>

    <!--업체리스트 상세-->
    <string name="list_title_detail">상세</string>


    <!--공통.-->
    <string name="text_dummy">image</string>
    <string name="text_vertical_bar">|</string>
    <string name="text_positive">예</string>
    <string name="text_negative">아니오</string>
    <string name="text_neutral">나중에</string>
    <string name="text_complete">완료</string>
    <string name="text_rewrite">다시작성</string>
    <string name="text_confirm">확인</string>
    <string name="text_cancel">취소</string>
    <string name="text_selection_cancel">선택취소</string>
    <string name="text_close">닫기</string>
    <string name="text_back">이전</string>
    <string name="text_next">다음</string>
    <string name="text_preview">미리보기</string>
    <string name="text_finish">종료</string>
    <string name="text_setting">설정</string>
    <string name="text_stop_looking">그만보기</string>
    <string name="text_retry">재시도</string>
    <string name="text_search">검색</string>
    <string name="text_initial">초기화</string>
    <string name="text_edit">편집</string>
    <string name="text_modify">수정</string>
    <string name="text_save">저장</string>
    <string name="text_new">신규</string>
    <string name="text_insert">추가</string>
    <string name="text_delete">삭제</string>
    <string name="text_use">사용</string>
    <string name="text_selection">선택</string>
    <string name="text_input">입력</string>
    <string name="text_update">업데이트</string>
    <string name="text_inquiry">조회</string>
    <string name="text_list">목록</string>
    <string name="text_view_list">목록보기</string>
    <string name="text_view_all">전체보기</string>
    <string name="text_detail">자세히</string>
    <string name="text_phone">전화</string>
    <string name="text_call">전화걸기</string>
    <string name="text_send">전송</string>
    <string name="text_dispatch">발송</string>
    <string name="text_division">구분</string>
    <string name="text_item">항목</string>
    <string name="text_notify">알림</string>
    <string name="text_info">정보</string>
    <string name="text_transfer">전송</string>
    <string name="text_connection">연결</string>
    <string name="text_registration">등록</string>
    <string name="text_more">더보기</string>
    <string name="text_listening">청취 중..</string>
    <string name="text_auto_login_setting">자동 로그아웃 설정</string>
    <string name="text_default_quantity">1</string>
    <string name="text_default_price">0</string>
    <string name="text_spinner_default_selection">선택</string>
    <string name="text_change">변경</string>
    <string name="text_required">필수</string>
    <string name="text_error">오류</string>
    <string name="text_nothing">없음</string>
    <string name="text_all">전체</string>
    <string name="text_none">없음</string>
    <string name="text_empty">비어있음</string>
    <string name="text_unknown">알수없음</string>
    <string name="text_no_input">입력없음</string>
    <string name="text_not_used">사용안함</string>
    <string name="text_not_sent">전송안함</string>
    <string name="text_not_applied">적용안함</string>
    <string name="text_unspecified">지정안함</string>
    <string name="text_no_selection">선택없음</string>
    <string name="text_not_applicable">해당없음</string>
    <string name="text_undefined">정의되지 않음</string>
    <string name="text_invalid">유효하지 않음</string>
    <string name="text_permission_approval">권한승인</string>
    <string name="text_no_data">데이터가 없습니다.</string>
    <string name="text_no_search_text">입력된 검색어가 없습니다.</string>
    <string name="text_search_text_incorrect">입력된 검색어가 올바르지 않습니다.</string>
    <string name="text_syncing_data">동기화 중..</string>
    <string name="text_fetched_data_empty">0 건의 데이터를 가져왔습니다.</string>
    <string name="text_search_fetched_data_empty">\"%1$s\" 검색 결과\n0 건의 데이터를 가져왔습니다.</string>
    <string name="text_please_select_one_item">1개 항목만 선택하여 주십시오.</string>
    <string name="text_please_select_an_item">항목을 선택하여 주십시오.</string>
    <string name="text_one_item_selected">1개 항목을 선택하여 주십시오.</string>
    <string name="text_enough_information">항목의 정보가 부족합니다.</string>
    <string name="text_missing_required_items">필수 항목이 누락 되었습니다.</string>
    <string name="text_delete_item">삭제하시겠습니까?</string>
    <string name="text_deletion_is_complete">삭제가 완료 되었습니다.</string>
    <string name="text_saving_is_complete">저장이 완료되었습니다.</string>
    <string name="text_please_install_kakaotalk">카카오톡을 설치하여 주십시오.</string>
    <string name="text_application_finish">어플리케이션을 종료하시겠습니까?</string>
    <string name="text_application_close">종료 하려면 이전 버튼을 한 번 더 누르세요.</string>
    <string name="text_call_error_string">전화번호(%s)가 올바르지 않습니다.</string>
    <string name="text_unknown_error">Unknown Error</string>
    <string name="enter_vehicle_number_and_customer_name">[차량번호], [고객명]을 입력하여 주십시오.</string>
    <string name="enter_vehicle_number">[차량번호]를 입력하여 주십시오.</string>
    <string name="vehicle_number_incorrect">입력된 차량번호가 올바르지 않습니다.</string>
    <string name="enter_vin_number">[차대번호]를 입력하여 주십시오.</string>
    <string name="enter_customer_name">고객명(차량 소유주)을 입력하여 주십시오.</string>
    <string name="empty_vin_number">[차대번호] 정보가 부족합니다.</string>
    <string name="empty_customer_name">고객명(차량 소유주) 정보가 부족합니다.</string>
    <string name="only_available_to_administrators">해당 메뉴는 관리자만 이용할 수 있습니다.</string>

</resources>