<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageview_logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_list"
        style="@style/StyleButton.MainSecondMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:drawableStart="@drawable/img_main_bul_indigo"
        android:drawablePadding="@dimen/dp8"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/dp60"
        android:text="@string/main_menu_list"
        app:layout_constraintBottom_toTopOf="@+id/button_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageview_logo"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_location"
        style="@style/StyleButton.MainSecondMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp8"
        android:layout_marginEnd="@dimen/dp16"
        android:drawableStart="@drawable/img_main_bul_yellow"
        android:drawablePadding="@dimen/dp8"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/dp60"
        android:text="@string/main_menu_location"
        app:layout_constraintBottom_toTopOf="@+id/button_call"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_list"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_call"
        style="@style/StyleButton.MainSecondMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:drawableStart="@drawable/img_main_bul_red"
        android:drawablePadding="@dimen/dp8"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/dp60"
        android:text="@string/main_menu_call"
        app:layout_constraintBottom_toTopOf="@+id/button_setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_location"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_setting"
        style="@style/StyleButton.MainSecondMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:layout_marginEnd="@dimen/dp16"
        android:drawableStart="@drawable/img_main_bul_lightblue"
        android:drawablePadding="@dimen/dp8"
        android:gravity="start|center_vertical"
        android:minHeight="@dimen/dp60"
        android:text="@string/main_menu_setting"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_call"
        />
</androidx.constraintlayout.widget.ConstraintLayout>