<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    >
    <!--타이틀-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_title"
        style="@style/StyleTextView.ExtraBold.Large.ActionBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/auth_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <!--휴대폰 번호-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_phone_number"
        style="@style/StyleTextView.Regular.Small.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/auth_mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_title"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_phone_number"
        style="@style/StyleEditText.Bold.Medium.Stroke.Corners.White"
        android:layout_width="@dimen/dp0"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp16"
        android:layout_marginTop="@dimen/dp4"
        android:background="@drawable/selector_rectangle_4dp_white_normal"
        android:gravity="start|center"
        android:hint="@string/auth_mobile_number"
        android:imeOptions="actionNext"
        android:inputType="number"
        android:maxLength="11"
        android:maxLines="1"
        android:minHeight="@dimen/dp48"
        android:nextFocusDown="@id/edittext_auth_number"
        app:layout_constraintEnd_toStartOf="@+id/button_send_auth_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_phone_number"
        app:layout_goneMarginEnd="0dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_send_auth_number"
        style="@style/StyleButton.Bold.Medium.Corners.DeepGray"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp16"
        android:gravity="center"
        android:text="@string/auth_auth_number"
        app:layout_constraintBottom_toBottomOf="@+id/edittext_phone_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edittext_phone_number"
        app:layout_constraintTop_toTopOf="@+id/edittext_phone_number"
        />
    <ProgressBar
        android:id="@+id/progressbar_send_auth_number"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_send_auth_number"
        app:layout_constraintEnd_toEndOf="@+id/button_send_auth_number"
        app:layout_constraintStart_toStartOf="@+id/button_send_auth_number"
        app:layout_constraintTop_toTopOf="@+id/button_send_auth_number"
        />
    <!--인증번호-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textview_auth_number"
        style="@style/StyleTextView.Regular.Small.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp16"
        android:text="@string/auth_auth_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_phone_number"
        />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edittext_auth_number"
        style="@style/StyleEditText.Bold.Medium.Stroke.Corners.White"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp16"
        android:layout_marginTop="@dimen/dp4"
        android:layout_marginBottom="@dimen/dp16"
        android:background="@drawable/selector_rectangle_4dp_white_normal"
        android:gravity="start|center"
        android:hint="@string/auth_auth_number_hint"
        android:imeOptions="actionDone"
        android:inputType="number"
        android:maxLength="5"
        android:maxLines="1"
        android:minHeight="@dimen/dp48"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_auth_number"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_check_auth"
        style="@style/StyleButton.ExtraBold.Medium.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="@dimen/dp48"
        android:text="@string/ivcore_text_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <ProgressBar
        android:id="@+id/progressbar_check_auth"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/button_check_auth"
        app:layout_constraintEnd_toEndOf="@+id/button_check_auth"
        app:layout_constraintStart_toStartOf="@+id/button_check_auth"
        app:layout_constraintTop_toTopOf="@+id/button_check_auth"
        />
</androidx.constraintlayout.widget.ConstraintLayout>